<?xml version="1.0"?>
<package format="3">
    <name>iirob_filters</name>
    <version>0.9.2</version>
    <description>The iirob_filters package implements following filters:
        1) Low-Pass
        2) Moving Mean
        3) Gravity Compensation (used for force-torque sensors)
        4) Threshold Filter
        5) Kalman Filter
        </description>

    <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

    <license>Apache2.0</license>

    <url type="website">http://wiki.ros.org/iirob_filters</url>
    <url type="repository">https://github.com/KITrobotics/iirob_filters</url>
    <url type="bugtracker">https://github.com/KITrobotics/iirob_filtersissues</url>

    <author email="denis.stogl@kit.edu">Denis Štogl</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>eigen3_cmake_module</depend>
    <depend>eigen</depend>
    <depend>filters</depend>
    <depend>geometry_msgs</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rosparam_shortcuts</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ros_testing</test_depend>

    <export>
      <build_type>ament_cmake</build_type>
      <filters plugin="${prefix}/filters_plugin.xml"/>
    </export>

  </package>
